--- a/bower.json
+++ b/bower.json
@@ -16,16 +16,32 @@
     "tests"
   ],
   "dependencies": {
-    "angular": "^1.5.7",
+    "angucomplete-alt": "^2.5.0", 
+    "angular": "^1.5.11", 
     "angular-bootstrap": "^1.3.3",
+    "angular-file-upload": "^2.4.1",
+    "angular-input-ssn": "^0.0.2",
+    "angular-md5": "^0.1.10",
+    "angular-moment-picker": "^0.9.3", 
     "angular-modal-service": "^0.10.1",
+    "angular-route": "^1.6.1", 
     "angular-ui-router": "^0.3.1",
+    "angular-xeditable": "^0.4.0",
+    "angularjs-dropdown-multiselect": "^1.5.2",
+    "angularUtils": "^0.0.0", 
     "bootstrap": "^3.3.6",
-    "font-awesome": "^4.6.3",
-    "jquery": "^3.1.0",
+    "bootstrap-select": "^1.11.2",
+    "checklist-model": "^0.10.0", 
+    "font-awesome": "^4.6.3", 
+    "jquery": "^2.2.4",
+    "lodash": "^2.4.4",
+    "moment": "^2.17.1", 
     "ng-dialog": "^0.6.2",
-    "angular-flash-alert": "^2.3.0",
+    "ng-multiselect": "^1.1.0",
+    "ngAutocomplete": "^1.0.0",
+    "ngPrint": "^0.1.0",
+ 
     "validate": "validate.js#^0.11.1",
-    "moment": "^2.17.1"
+    
   }
 }
